@startuml
class Main
class Building
class Room

Main : - Room living_room
Main : - Room kitchen
Main : - Room bed_room
Main : - ArrayList<Room> rooms
Main : - Building hospital
Main : + main(String args)
Main : + lampCount(ArrayList<Room>):int
Main : + isNormal(Building):boolean
Main *-- "has_a" Room
Main *-- "has_a" Building

Building : - ArrayList<Room> rooms
Building : - int numberOfBathRooms
Building : - int numberOfFloors
Building : - boolean isOfficeBuilding
Building : + getRooms():ArrayList<Room>
Building : + getNumberOfBathrooms():int
Building : + getNumberOfFloors():int
Building : + isOfficeBuilding():boolean
Building *-- "has_a" Room

Room : - int numberOfDoors
Room : - int numberOfLamps
Room : - int numberOfWindows
Room : + getNumberOfDoors():int
Room : + getNumberOfLamps():int
Room : + getNumberOfWindows():int
@enduml
